# chess-engine

./: .gitignore  CMakeLists.txt  README.md  chess_cuda_benchmark.ipynb  gen_notebook.py
cuda/: eval_cuda.cu  eval_cuda.cuh
src/: board.cpp  board.h  eval.cpp  eval.h  main.cpp  movegen.cpp  movegen.h  search.h  search_cuda.cpp  search_omp.cpp  search_serial.cpp
